Revise startup panel to be a little more user friendly. Decouple game board width from generic site width for future responsive happiness. Fix HUD icons occasionally shifting around

--- a/client/css/globals/admin.styl
+++ b/client/css/globals/admin.styl
@@ -1,3 +1,16 @@
+.console
+	width 800px
+	margin 25px auto
+	padding 25px
+	background $csLightGray
+	h4
+		text-transform capitalize
+	form
+		margin 12px 0
+		padding 20px 20px 8px
+		border 2px solid #ddd
+		background-color white
+
 .monitor
 	.adminLink
 		width 150px
@@ -98,9 +111,19 @@ p.level2
 p.level3
 	background $csOrange
 
-#dataLoaders
-	button
-		margin 10px
+#admin-startup
+	.loader
+		margin 12px 0
+		padding 20px
+		border 2px solid $csGray
+		background-color white
+		.loader-button-row
+			margin-top 10px
+		.loader-spinner
+			margin-top -20px
+			margin-left 56px
+		button
+			width 120px
 
 .npcs
 	h3
