--- a/client/css/globals/custom.styl
+++ b/client/css/globals/custom.styl
@@ -5,9 +5,6 @@ body
 	margin-top 110px
 	font-family $bodyFont
 
-.container
-	width 970px
-
 .navbar
 	user-select none
 	.navbar-inner
@@ -34,7 +31,7 @@ body
 	.btn, .btn-group
 		margin-top 10px
 	.btn-group
-	  // .tempFixMargin
+		// .tempFixMargin
 		margin-right 50px
 	.username
 		margin 0 6px
@@ -102,29 +99,9 @@ a:hover
 .iconInfo
 	margin-bottom 30px
 
-.console
-	margin 25px auto
-	padding 25px
-	width 800px
-	background #eee
-	box-shadow 3px 3px 3px #999
-	h4
-		text-transform capitalize
-	form
-		margin 12px 0
-		padding 20px 20px 8px
-		border 2px solid #ddd
-		background-color white
-	.loader
-		margin 12px 0
-		padding 20px 20px 8px
-		border 2px solid #ddd
-		background-color white
-		pre
-			margin 12px 0
 
+// Override Bootstrap's silly blockquote style
 blockquote
-	// Override Bootstrap's silly blockquote style
 	margin 1em 40px
 	border-left 4px solid #b3b3b3
 
@@ -133,8 +110,113 @@ blockquote
 .tooltip-inner
 	line-height 1.25em
 	padding 8px
+
 // Fix slightly uncentered placement of pointer arrows due to global box model change
 .tooltip.top, .tooltip.bottom
 	.tooltip-arrow
 		margin-left -5px
 
+// Fix for Font Awesome using the translateZ hack
+.fa-lg
+	transform translateZ(0)
+
+
+// CSS SPINNER
+
+// CSS Spinner test: https://github.com/jlong/css-spinners/blob/master/css/spinner/spinner.css
+// Modify font-size for .spinner get the right size
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-o-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+/* :not(:required) hides this rule from IE9 and below */
+.spinner:not(:required) {
+  -webkit-animation: spinner 1500ms infinite linear;
+  -moz-animation: spinner 1500ms infinite linear;
+  -ms-animation: spinner 1500ms infinite linear;
+  -o-animation: spinner 1500ms infinite linear;
+  animation: spinner 1500ms infinite linear;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
+  -moz-box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
+  box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
+  display: none;
+  font-size: 8px;
+  width: 1em;
+  height: 1em;
+  margin: 1.5em;
+  overflow: hidden;
+  text-indent: 100%;
+}
