--- a/client/css/globals/game.styl
+++ b/client/css/globals/game.styl
@@ -5,6 +5,9 @@
 	font-weight normal
 	font-style normal
 
+.game-container, .game-container .container
+	width 970px !important
+
 #gameboard
 	// cursor none
 	position relative
@@ -999,102 +1002,4 @@ svg.tangram-svg
 	// see also .puzzle-svg
 	width 100%
 	height 250px
-
-// CSS Spinner test: https://github.com/jlong/css-spinners/blob/master/css/spinner/spinner.css
-// Modify font-size for .spinner get the right size
-@-webkit-keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-moz-keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-o-keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-/* :not(:required) hides this rule from IE9 and below */
-.spinner:not(:required) {
-  -webkit-animation: spinner 1500ms infinite linear;
-  -moz-animation: spinner 1500ms infinite linear;
-  -ms-animation: spinner 1500ms infinite linear;
-  -o-animation: spinner 1500ms infinite linear;
-  animation: spinner 1500ms infinite linear;
-  -webkit-border-radius: 0.5em;
-  -moz-border-radius: 0.5em;
-  -ms-border-radius: 0.5em;
-  -o-border-radius: 0.5em;
-  border-radius: 0.5em;
-  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
-  -moz-box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
-  box-shadow: rgba(64, 64, 64, 0.5) 1.5em 0 0 0, rgba(64, 64, 64, 0.5) 1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) 0 1.5em 0 0, rgba(64, 64, 64, 0.5) -1.1em 1.1em 0 0, rgba(64, 64, 64, 0.5) -1.5em 0 0 0, rgba(64, 64, 64, 0.5) -1.1em -1.1em 0 0, rgba(64, 64, 64, 0.5) 0 -1.5em 0 0, rgba(64, 64, 64, 0.5) 1.1em -1.1em 0 0;
-  display: none;
-  font-size: 8px;
-  width: 1em;
-  height: 1em;
-  margin: 1.5em;
-  overflow: hidden;
-  text-indent: 100%;
-}
 
