--- a/client/css/globals/mixins.styl
+++ b/client/css/globals/mixins.styl
@@ -93,6 +93,13 @@ user-select()
 	-ms-user-select arguments
 	user-select arguments
 
+transform()
+	-webkit-transform arguments
+	-moz-transform arguments
+	-ms-transform arguments
+	-o-transform arguments
+	transform arguments
+
 // $clearfix()
 // 	&:before
 // 	&:after
